#TackEngineLib ChangeLog

##Update 1.3
###Known Issues:
- The SpriteSheet class so fucking broken

- Changed out the Sprite class holds data.
	> Data is now stored in a byte array (representing RGBA values)
	> If you need the Sprite in a Bitmap format, called GetBitmapCopy(). Don't forget to dispose of the Bitmap after you are done!
- Added a SpriteAtlas class.